tests/NormalTests/paczka2/big_fuzzy/17265644.err
Error in line 2: A154 A806 41,1
Error in line 11: A7NMQPCQ A806 33,8
Error in line 21: A7NMQPCQ A96 120,57
Error in line 5: vI3o8lo A96 79,7
Error in line 19: qJS2EC A733 57,0
Error in line 29: bQh A806 13,7
Error in line 48: bQh A96 194
Error in line 49: A7NMQPCQ A806 37,64
Error in line 50: A7NMQPCQ A80+ 117,1
Error in line 36: A154 A806 60,0
Error in line 47: bQh A96 77,5
Error in line 57: vI3o8lo A154 11,5
Error in line 33: A7NMQPCQ A96 36,7
Error in line 45: qJS2EC A806 83,3
Error in line 66: vI3o8lo A733 56,2
Error in line 68: A154 A806 67,8
Error in line 71: vI3o8lo A96 46,2
Error in line 85: qJS2EC 154 134,1
Error in line 88: A7NMQPCQ A154 14,7
Error in line 99: ZTyA6PUh A/33 242,5
Error in line 93: ZTyA6PUh A733 86,9
Error in line 111: A154 A96 55,4
Error in line 114: A154 A806 74,4
Error in line 122: bQh A733 92,4
Error in line 118: vI3o8lo A154 14,1
Error in line 130: H86VrnT A733 89,8
Error in line 117: qJS2EC A96 105,0
Error in line 144: qJS2EC»A806»0,0
Error in line 143: H86VrnT A733 19,1
Error in line 148: H86VrnT A154 51,9
Error in line 153: vI3o8lo A96 58,6
Error in line 137: A154 A96 14,5
Error in line 154: H86VrnT A733 65,7
Error in line 139: qJS2EC A806 0,0
Error in line 174: ZTyA6PUh A06 16,9
Error in line 170: ZTyA6PUh A806 28,2
Error in line 166: H86VrnT A806 175,9
Error in line 175: ZTyA6PUh A733 38,9
Error in line 201: bQh A96 40,0
Error in line 203: qJS2EC A154 72,9
Error in line 217: A154 A806 23,6
Error in line 224: A154 A733 40,6
Error in line 223: vI3o8lo A733 84,0
Error in line 238: A154 A96 103,5
Error in line 239: A154 A154 3,4
